    - Add license & copyright for lz4.{c,h}
  * Add patch to fix various spelling errors.
  * Use packaged jQuery in HTML documentation.
  * Add jquery.fixedheadertable.js to missing-sources.
  * Remove empty files (class_graphical).
  * Enable bzip2 support.
  * Enable PDAL support.
  * Drop explicit python-numpy dependency, included in ${python:Depends}
    via dh_numpy.

 -- Bas Couwenberg <sebastic@debian.org>  Sat, 09 Apr 2016 12:50:12 +0200

grass (7.0.3-3) unstable; urgency=medium

  * Update dh_python2 override to call dh_numpy too.
  * Enable all hardening buildflags, except PIE (causes build failure).
  * Add patch to fix various spelling errors.
  * Don't delete /usr/lib/grass70/etc/license, not an extra license file
    and required for `grass --version`.

 -- Bas Couwenberg <sebastic@debian.org>  Tue, 29 Mar 2016 22:03:26 +0200

grass (7.0.3-2) unstable; urgency=medium

  * Require at least liblas 1.8.0-8 for GDAL 2.0 transition.
  * Add patch for various typos.
  * Move from experimental to unstable.

 -- Bas Couwenberg <sebastic@debian.org>  Wed, 02 Mar 2016 14:36:07 +0100

grass (7.0.3-2~exp1) experimental; urgency=medium

  * Bump Standards-Version to 3.9.7, no changes.
  * Require at least libgdal-dev 2.0 for experimental builds.

 -- Bas Couwenberg <sebastic@debian.org>  Fri, 19 Feb 2016 15:29:10 +0100

grass (7.0.3-1) unstable; urgency=medium

  * New upstream release.
  * Update copyright file, changes:
    - Update copyright years for Markus Neteler
    - Drop license & copyright for removed mapcalc.tab Bison files
  * Add patch for various typos.
  * Move from experimental to unstable.

 -- Bas Couwenberg <sebastic@debian.org>  Thu, 28 Jan 2016 23:02:33 +0100

grass (7.0.3~rc2-1~exp1) experimental; urgency=medium

  * New upstream release candidate.
  * Update copyright years for GRASS Development Team in copyright file.
  * Drop various-typos.patch, applied upstream.

 -- Bas Couwenberg <sebastic@debian.org>  Fri, 15 Jan 2016 14:39:20 +0100
